k8s/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: smartfood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: smartfood-order:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: jwt-keys
              mountPath: /app/keys
              readOnly: true
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 40
            periodSeconds: 10
      volumes:
        - name: jwt-keys
          secret:
            secretName: smartfood-secrets
            items:
              - key: JWT_PUBLIC_KEY
                path: public.pem
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: smartfood
spec:
  selector:
    app: order-service
  ports:
    - port: 8083
      targetPort: 8083
