k8s/pricing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
  namespace: smartfood
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pricing-service
  template:
    metadata:
      labels:
        app: pricing-service
    spec:
      containers:
        - name: pricing-service
          image: smartfood-pricing:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 40
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  namespace: smartfood
spec:
  selector:
    app: pricing-service
  ports:
    - port: 8085
      targetPort: 8085
